--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,36 +1,78 @@
 /* Ver fuentes */
 
-
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: black;
-  background-color: #FFFFFF;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  /* Paleta de colores */
+  --color-primary: #3498db;
+  --color-secondary: #e74c3c;
+
+  /* Tamaño predeterminado */
+  --font-size-medium: 16px;
+
+  /* Fuentes ejemplo */
+  --font-primary: "Lobster", cursive;
+  --font-secondary: "Open Sans", sans-serif;
+  --font-script: "Dancing Script", cursive;
+
+  /* Altura de líneas  y grosor de letra */
+  --line-height-medium: 1.5;
+  --font-weight-regular: 400;
+
+  /* Sombras de elementos */
+  --box-shadow-dark: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+  --box-shadow-light: 10px 10px 5px 0px rgba(0, 0, 0, 0.45);
 }
 
 * {
-  box-sizing:border-box;
+  box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
-  display: flex;
   min-width: 320px;
   min-height: 100vh;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
+body {
+  font-family: var(--font-secondary);
+  line-height: var(--line-height-medium);
+  font-weight: var(--font-weight-regular);
+  font-size: var(--font-size-medium);
+}
+
+h1,
+h2,
+h3 {
+  font-family: var(--font-primary);
+}
+
+/* Custom Class */
+.cl-primary {
+  color: var(--color-primary);
+}
+
+.cl-secondary {
+  color: var(--color-secondary);
+}
+
+.bg-primary {
+  background-color: var(--color-primary);
+}
+
+.bg-secondary {
+  background-color: var(--color-secondary);
+}
+
+.bs-light {
+  box-shadow: var(--box-shadow-light);
+}
+
+.bs-dark {
+  box-shadow: var(--box-shadow-dark);
 }
