--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,7 +12,8 @@
 
   /* Paleta de colores */
   --color-red-strong: #BB1B09;
-  --color-red-dark: #8D2607
+  --color-red-dark: #8D2607;
+  --color-primary: #000FFF;
   --color-secondary: #0b0a0a;
 
   /* Tamaño predeterminado */
